# learn-by-example

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  deep.txt  go.mod  go.sum  ide_limit.sh  me.md  todo.md
.devcontainer/: devcontainer.json
ebpf/acl/: Makefile  acl.c
ebpf/acl/ebpf/: acl.c
ebpf/acl/ping_disable/: Makefile  acl.c  main.go
ebpf/bpf2bpf/: main.go
ebpf/bsearch/: main.go
ebpf/fentry-bpf2bpf/: main.go
ebpf/fentry_fexit/: main.go
ebpf/fentry_fexit-bpf2bpf/: main.go
ebpf/fentry_fexit-freplace/: main.go
ebpf/fentry_fexit-freplace-xdp/: main.go
ebpf/fentry_fexit-kprobe/: main.go
ebpf/fentry_fexit-tailcall/: main.go
ebpf/fentry_fexit-tailcall_in_bpf2bpf/: main.go
ebpf/fentry_fexit-tc/: main.go
ebpf/fentry_fexit-tracepoint/: fentry_fexit.c
ebpf/fentry_fexit-xdp/: main.go
ebpf/fentry_fexit/fentry_fexit/: main.go  tcp-connecting.c
ebpf/fentry_fexit/tc/: main.go  tc.c
ebpf/fexit/sysctl_ipv4/: main.go  sysctl.c
ebpf/fexit_ipv4_sysctl/: main.go
ebpf/fexit_rpsxps/: main.go
ebpf/freplace/: main.go
ebpf/global-variable/: main.go
ebpf/hack/freplace/: main.go
ebpf/hack/global-variable/: main.go  tcp-connecting.c
ebpf/inject/: Makefile
ebpf/iptables-bpf/: Makefile
ebpf/iptables-trace/: README.md  main.go
ebpf/iptables-trace/ebpf/: iptables-trace.c
ebpf/iptables/iptables-bpf/: Makefile
ebpf/iter/: bpf_iter_tcp4.c  main.go
ebpf/kernel-module-fun/: README.md  add-arp-records.c  who-connect-me.c
ebpf/kfunc_ffs/: main.go
ebpf/metadata/metadata/: README.md  main.go
ebpf/metadata/xdp2afxdp/: main.go
ebpf/metadata_xdp2afxdp/: main.go
ebpf/switch/: switch.c
ebpf/tailcall/: main.go
ebpf/tailcall-in-bpf2bpf/: main.go
ebpf/tailcall-in-freplace/: main.go
ebpf/tailcall-in-freplace1/: main.go
ebpf/tailcall-stackoverflow/: tcp-connecting.c
ebpf/tailcall/call_static/: main.go
ebpf/tailcall/freplace/: main.go
ebpf/tailcall/shared/: main.go
ebpf/tailcall/stackoverflow/: fentry.c  fexit.c  main.go
ebpf/tailcall/tailcall/: main.go  tcp-connecting.c
ebpf/tc/: read.md
ebpf/tc/ingress/: main.go  tcx.c
ebpf/timer/: main.go
ebpf/tracepoint/: main.go
ebpf/utils/: switch.c
ebpf/xdp/: readme.md
ebpf/xdp-traceroute-bpffs/: README.md  main.go
ebpf/xdp/cpumap/: main.go
ebpf/xdp/crc/: main.go  xdp.c
ebpf/xdp/metadata/: main.go
ebpf/xdp/traceroute-bpffs/: main.go  traceroute.c
ebpf/xdp/xdpping/: main.go  xdp_ping.c
fentry_fexit/tailcall_in_bpf2bpf/: fentry_fexit.c
fentry_fexit/tracepoint/: main.go
fentry_fexit/xdp/: main.go
iptables/nfqueue/: README.md  main.go
resources/: init.sh
